src/style.css
/* ... */
.app-logo-flex {
  --gap: 0.5rem;
  width: max-content;
  align-items: center;
  cursor: pointer;
}

.navbar-flex {
  --gap: 1.5rem;
}

.app-icon {
  display: grid;
  place-items: center;
  background-color: var(--clr-dark);
  filter: brightness(50%);
  padding: 0.8rem;
  border-radius: 50%;
  font-size: 1.5rem;
}

.profile-icon {
  cursor: pointer;
}

.form {
}
/* SLIDER */

.slider-x {
  position: relative;

  --gap: 1rem;
  display: grid;
  gap: var(--gap);
  place-items: center;
  grid-auto-flow: column;
  grid-auto-columns: 27%;

  /* background-color: var(--clr-grey-900); */
  background-color: hsl(209deg 62% 83% / 20%);
  backdrop-filter: blur(2rem);

  /* `padding` and `scroll-padding-inline` works together */
  padding: var(--gap);
  scroll-padding-inline: var(--gap);

  border-radius: var(--border-radius-default);

  overflow-x: auto;
  overflow-y: auto;
  scroll-snap-type: x mandatory;

  /* prevent overscrolling */
  overscroll-behavior-inline: contain;

  /* Hide scrollbar for Firefox */
  scrollbar-width: none;
  /* Hide scrollbar for IE and Edge */
  -ms-overflow-style: none;
}

.slider-x:not(:has(> :first-child)) {
  display: none;
}

/* .slider-x::after {
  content: "";
  position: absolute;
  z-index: -1;
  bottom: -50px;
  left: 0;
  width: 90%;
  height: 15px;
  background: rgb(190 19 19 / 100%);
  border-radius: 50%;
  filter: blur(1.5rem);
} */

.slider-y {
  --gap: 1rem;
  display: grid;

  gap: var(--gap);
  place-items: center;
  /* grid-template-rows: min-content; */
  grid-auto-flow: column;
  grid-auto-columns: 21%;

  background-color: var(--clr-grey-900);

  /* `padding` and `scroll-padding-inline` works together */
  padding: var(--gap);
  scroll-padding-inline: var(--gap);

  border-radius: var(--border-radius-default);

  overflow-y: auto;
  scroll-snap-type: y mandatory;

  /* prevent overscrolling */
  overscroll-behavior-block: contain;
  /* Hide scrollbar for Firefox */
  scrollbar-width: none;
  /* Hide scrollbar for IE and Edge */
  -ms-overflow-style: none;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.slider-x::-webkit-scrollbar,
.slider-y::-webkit-scrollbar {
  display: none;
}

.search-input-flex {
  align-items: center;
  justify-items: center;

  --gap: 0.4rem;
  border: 1px solid var(--clr-grey-900);
  padding: 0.6rem 1.2rem;
  border-radius: var(--border-radius-default);
}

input {
  width: 0;
  width: min-content;
  border-radius: var(--border-radius-default);
  color: var(--clr-grey-100);
  background-color: transparent;
  /* margin-inline: auto; */
}

input::placeholder {
}

input::placeholder:focus,
input::placeholder:focus-visible {
  background-color: var(--clr-grey-700);
}

input:focus,
input:focus-visible {
  outline: none;
  outline-bottom: 1px solid var(--clr-grey-800);
  background-color: hsl(211deg 39% 23% / 10%);
}

.button {
}

/* * MAIN * */

main {
  max-width: var(--body-max-width);
  width: 100%;
  justify-self: center;
}

.main-grid {
  grid-template-rows: auto 1fr;
  justify-items: center;

  padding-block: 5rem;
}

.app-grid {
  position: relative;

  --gap: 2rem;
  --grid-columns: 5;
  /* --grid-columns: auto-fit; */

  justify-items: center;
  /* grid-template-rows: minmax(10rem, 20rem); */
  --grid-column-min-width: 50rem;
}

.film-card {
  position: relative;

  overflow: hidden;

  scroll-snap-align: start;
}

#app .film-card {
  transform: scale(1);
  transition: transform 0.2s ease-in;
}

#app .film-card:hover {
  position: relative;
  z-index: 10;
  transform: scale(1.165);
}

.film-infos {
  max-height: 14rem;
  min-height: 8rem;
  position: absolute;
  z-index: 3;
  bottom: 0;
  left: 0;
  pointer-events: none;
  padding: 1rem;
  opacity: 0;
  transition: opacity 0.2s ease-in-out;
  background-color: var(--clr-white);
  border-radius: 0 0 var(--border-radius-default) var(--border-radius-default);

  width: 100%;
  margin-inline-start: auto;
}

.film-poster {
  max-width: 100%;
  cursor: pointer;
  filter: brightness(100%);
  transition: transform 0.2s ease-in;
}

.film-poster:hover {
  filter: brightness(40%);
}

.film-poster:hover + .film-infos {
  opacity: 1;
}

.film-poster img {
  border-radius: var(--border-radius-default);
  object-fit: cover;
  width: 100%;
}

.film-title-flex {
  justify-self: center;
  align-items: center;
  justify-content: space-between;
}

.film-title-flex h3 {
  font-size: var(--fs-xl);
}

.film-note {
  border-radius: 50%;
  background-color: steelblue;
  padding: 0.5rem;
}

.film-overview {
  /* white-space: nowrap; */
  font-size: var(--fs-sm);
  text-overflow: ellipsis;
  color: var(--clr-grey-900);
  overflow-wrap: break-word;
  word-wrap: break-word;

  -ms-word-break: break-word;
  word-break: break-word;
}

.see-more {
  color: hsl(22deg 88% 54%);
}

/* * FOOTER * */

footer {
  max-width: var(--body-max-width);
  width: 100%;
  justify-self: center;
  padding: 2rem;
}

.footer-grid {
  justify-items: center;
}

/* Mobile First */
/* @media only screen and (320px < width < 768px) {

} */

/* @media only screen and (width < 1024px) {

} */

/* @media only screen and (768px <= width < 1024px) {

} */

/* @media only screen and (1024px <= width <= 1440px) {

} */

@media only screen and (1440px < width /* < 1920px */) {
}

